# jami-nameservice

./: .gitreview  Makefile  README.md  docker-compose.yml  genesis.json  groups  index.js  package.json  project.config  read_names.js  readme.md  registrar.sol  start_eth_cluster.py  write_names.js
blockchain-dev/: Dockerfile  README.md  entrypoint
contract/: Makefile  build.json  compile  council.sol  logic.sol  proxy.sol  registrar.sol  store.sol
instructions/: README.md  genesis.json
name-server/: .gdbinit  Cargo.toml  Dockerfile  entrypoint
name-server/src/: cli.yml  eth.rs  main.rs  ns.rs  utils.rs
tools/: deploy-council  make-logic-proposal
volumes/for-blockchain-dev/var/: .gitignore
volumes/for-proxy/: traefik-dynamic.yml
volumes/for-proxy/certs/: gen-cert  ssl.conf
