[package]
name    = "jami-name-server"
version = "0.1.0"
authors = ["Olivier Dion <olivier.dion@savoirfairelinux.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
web3 = "0.16.0"
lru = "0.6.5"
log = "0.4.14"
env_logger = "0.6.1"
clap = { version = "2.33.3", features = ["yaml"] }
hex = "0.4.3"